--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1177,109 +1177,156 @@
       "commission": "Provision"
     },
     "claims": {
-      "opening": {
-        "claim_opening": "Schadensmeldung",
-        "product": "Produkt",
-        "select_product": "Produkt auswählen",
-        "policy": "Versicherungspolice",
-        "select_policy": "Versicherungspolice auswählen",
-        "loss_date": "Verlustdatum",
-        "select_date": "Datum auswählen",
-        "loss_time": "Verlustzeit",
-        "select_time": "Zeit auswählen",
-        "risk": "Risiko",
-        "select_risk": "Risiko auswählen",
-        "notification_date": "Benachrichtigungsdatum",
-        "causation": "Ursache",
-        "select_causation": "Ursache auswählen",
-        "catastrophe_event": "Katastrophe/Ereignis",
-        "select_catastrophe_event": "Katastrophe/Ereignis auswählen",
-        "claim_description": "Schadenbeschreibung",
-        "enter_claim_description": "Schadenbeschreibung eingeben",
-        "party_to_blame": "Verantwortliche Partei",
-        "select_party_to_blame": "Verantwortliche Partei auswählen",
-        "average_basic_salary": "Durchschnittliches Grundgehalt",
-        "enter_average_basic_salary": "Durchschnittliches Grundgehalt eingeben",
-        "average_earnings": "Durchschnittliche Einnahmen",
-        "enter_average_earnings": "Durchschnittliche Einnahmen eingeben",
-        "off_duty_date_from": "Abwesenheitsdatum Von",
-        "off_duty_date_to": "Abwesenheitsdatum Bis",
-        "liability_admission": "Haftungsanerkennung",
-        "next_review_date": "Nächstes Überprüfungsdatum",
-        "next_review_user": "Nächster Überprüfungsbenutzer",
-        "select_next_review_user": "Nächster Überprüfungsbenutzer auswählen",
-        "priority_level": "Prioritätsstufe",
-        "select_priority_level": "Prioritätsstufe auswählen",
-        "reference_number": "Referenznummer",
-        "enter_reference_number": "Referenznummer eingeben",
-        "accident_location": "Unfallort",
-        "enter_accident_location": "Unfallort eingeben",
-        "add_peril": "Gefahr hinzufügen",
-        "peril": "Gefahr",
-        "claim_estimate": "Schätzung des Schadens",
-        "actions": "Aktionen",
-        "edit": "Bearbeiten",
-        "delete": "Löschen",
-        "capture_claim": "Schaden erfassen",
-        "insured_as_claimant": "Versicherter als Kläger",
-        "claimant": "Kläger",
-        "create_claimant": "Kläger erstellen",
-        "peril_details": "Details zur Gefahr",
-        "select_peril": "Gefahr auswählen",
-        "enter_claim_estimate": "Schätzung des Schadens eingeben",
-        "cancel": "Abbrechen",
-        "save": "Speichern",
-        "edit_peril": "Bewerk Gevaar",
-        "confirm_delete_peril": "Weet u zeker dat u dit gevaar wilt verwijderen?",
-        "enter_peril": "Voer Gevaar in"
-      },
-      "claim_transaction": {
-        "claim_transaction_details": "Details der Anspruchsabwicklung",
-        "claim_number": "Anspruchsnummer",
-        "product": "Produkt",
-        "risk_wef": "Risiko WEF",
-        "loss_description": "Schadensbeschreibung",
-        "claim_status": "Anspruchsstatus",
-        "catastrophe": "Katastrophe",
-        "policy_number": "Police-Nummer",
-        "insured": "Versicherter",
-        "risk_wet": "Risiko WET",
-        "booked_by": "Gebucht von",
-        "next_review_date": "Nächster Überprüfungstermin",
-        "event": "Ereignis",
-        "endorsement_number": "Vermerksnummer",
-        "risk": "Risiko",
-        "claim_loss_date": "Datum des Anspruchsverlusts",
-        "booked_date": "Buchungsdatum",
-        "agent_intermediary": "Agent/Vermittler",
-        "priority_level": "Prioritätsstufe",
-        "client": "Klient",
-        "risk_value": "Risikowert",
-        "claim_notification_date": "Datum der Anspruchsbenachrichtigung",
-        "admit_liability": "Haftung übernehmen",
-        "insured_policy_no": "Versicherte Police-Nr.",
-        "currency": "Währung"
-      },
-      "claim_transaction_report": {
-        "claim_transaction_report": "Anspruchsabwicklungsbericht",
-        "claim_revisions": "Anspruchsrevisionen",
-        "claim_payments": "Anspruchszahlungen",
-        "letters_and_memos": "Briefe und Memos",
-        "policy_enquiry": "Police-Anfrage",
-        "back_to_claim_enquiry": "Zurück zur Anspruchsabfrage",
-        "trans_type": "Transaktionsart",
-        "trans_date": "Transaktionsdatum",
-        "gross_liability": "Bruttohaftung",
-        "net_liability_payee": "Nettohaftungsempfänger",
-        "paid_amount": "Gezahlter Betrag",
-        "authorised_by": "Autorisiert von",
-        "authorise_date": "Autorisierungsdatum",
-        "cheque_number": "Schecknummer",
-        "cheque_date": "Scheckdatum",
-        "receipt_number": "Empfangsnummer",
-        "action": "Aktion"
-      }
-    }
+  "opening": {
+    "claim_opening": "Schadensmeldung",
+    "product": "Produkt",
+    "select_product": "Produkt auswählen",
+    "policy": "Versicherungspolice",
+    "select_policy": "Versicherungspolice auswählen",
+    "loss_date": "Verlustdatum",
+    "select_date": "Datum auswählen",
+    "loss_time": "Verlustzeit",
+    "select_time": "Zeit auswählen",
+    "risk": "Risiko",
+    "select_risk": "Risiko auswählen",
+    "notification_date": "Benachrichtigungsdatum",
+    "causation": "Ursache",
+    "select_causation": "Ursache auswählen",
+    "catastrophe_event": "Katastrophe/Ereignis",
+    "select_catastrophe_event": "Katastrophe/Ereignis auswählen",
+    "claim_description": "Schadenbeschreibung",
+    "enter_claim_description": "Schadenbeschreibung eingeben",
+    "party_to_blame": "Verantwortliche Partei",
+    "select_party_to_blame": "Verantwortliche Partei auswählen",
+    "average_basic_salary": "Durchschnittliches Grundgehalt",
+    "enter_average_basic_salary": "Durchschnittliches Grundgehalt eingeben",
+    "average_earnings": "Durchschnittliche Einnahmen",
+    "enter_average_earnings": "Durchschnittliche Einnahmen eingeben",
+    "off_duty_date_from": "Abwesenheitsdatum Von",
+    "off_duty_date_to": "Abwesenheitsdatum Bis",
+    "liability_admission": "Haftungsanerkennung",
+    "next_review_date": "Nächstes Überprüfungsdatum",
+    "next_review_user": "Nächster Überprüfungsbenutzer",
+    "select_next_review_user": "Nächster Überprüfungsbenutzer auswählen",
+    "priority_level": "Prioritätsstufe",
+    "select_priority_level": "Prioritätsstufe auswählen",
+    "reference_number": "Referenznummer",
+    "enter_reference_number": "Referenznummer eingeben",
+    "accident_location": "Unfallort",
+    "enter_accident_location": "Unfallort eingeben",
+    "add_peril": "Gefahr hinzufügen",
+    "peril": "Gefahr",
+    "claim_estimate": "Schätzung des Schadens",
+    "actions": "Aktionen",
+    "edit": "Bearbeiten",
+    "delete": "Löschen",
+    "capture_claim": "Schaden erfassen",
+    "insured_as_claimant": "Versicherter als Kläger",
+    "claimant": "Kläger",
+    "create_claimant": "Kläger erstellen",
+    "peril_details": "Details zur Gefahr",
+    "select_peril": "Gefahr auswählen",
+    "enter_claim_estimate": "Schätzung des Schadens eingeben",
+    "cancel": "Abbrechen",
+    "save": "Speichern",
+    "edit_peril": "Bewerk Gevaar", 
+    "confirm_delete_peril": "Weet u zeker dat u dit gevaar wilt verwijderen?",
+    "enter_peril": "Voer Gevaar in"
+  },
+  "claim_transaction": {
+    "claim_transaction_details": "Details der Anspruchsabwicklung",
+    "claim_number": "Anspruchsnummer",
+    "product": "Produkt",
+    "risk_wef": "Risiko WEF",
+    "loss_description": "Schadensbeschreibung",
+    "claim_status": "Anspruchsstatus",
+    "catastrophe": "Katastrophe",
+    "policy_number": "Police-Nummer",
+    "insured": "Versicherter",
+    "risk_wet": "Risiko WET",
+    "booked_by": "Gebucht von",
+    "next_review_date": "Nächster Überprüfungstermin",
+    "event": "Ereignis",
+    "endorsement_number": "Vermerksnummer",
+    "risk": "Risiko",
+    "claim_loss_date": "Datum des Anspruchsverlusts",
+    "booked_date": "Buchungsdatum",
+    "agent_intermediary": "Agent/Vermittler",
+    "priority_level": "Prioritätsstufe",
+    "client": "Klient",
+    "risk_value": "Risikowert",
+    "claim_notification_date": "Datum der Anspruchsbenachrichtigung",
+    "admit_liability": "Haftung übernehmen",
+    "insured_policy_no": "Versicherte Police-Nr.",
+    "currency": "Währung"
+  },
+  "claim_transaction_report": {
+    "claim_transaction_report": "Anspruchsabwicklungsbericht",
+    "claim_revisions": "Anspruchsrevisionen",
+    "claim_payments": "Anspruchszahlungen",
+    "letters_and_memos": "Briefe und Memos",
+    "policy_enquiry": "Police-Anfrage",
+    "back_to_claim_enquiry": "Zurück zur Anspruchsabfrage",
+    "trans_type": "Transaktionsart",
+    "trans_date": "Transaktionsdatum",
+    "gross_liability": "Bruttohaftung",
+    "net_liability_payee": "Nettohaftungsempfänger",
+    "paid_amount": "Gezahlter Betrag",
+    "authorised_by": "Autorisiert von",
+    "authorise_date": "Autorisierungsdatum",
+    "cheque_number": "Schecknummer",
+    "cheque_date": "Scheckdatum",
+    "receipt_number": "Empfangsnummer",
+    "action": "Aktion"
+  },
+  "view_transaction":{
+    "claimRevisionSummary": "Zusammenfassung der Anspruchsrevision",
+  "currentTicket": "Aktuelles Ticket",
+  "lossOpeningDataEntry": "Eingabe der Daten zur Schadensmeldung",
+  "transactionType": "Transaktionsart",
+  "revisionDate": "Revisionsdatum",
+  "revisionOwnPercentage": "Revision Eigenanteil %",
+  "ownGrossAmount": "Eigenbruttobetrag",
+  "ownShare": "Eigenanteil",
+  "authorizedBy": "Autorisiert von",
+  "revisionAuthorized": "Revision Autorisiert",
+  "dateAuthorized": "Datum der Genehmigung",
+  "revisionRemarks": "Revisionsbemerkungen",
+  "claimOpeningPeril": "ANSPRUCHSERÖFFNUNG GEFAHR",
+  "makeReady": "Bereit machen",
+  "undoMakeReady": "Rückgängig machen",
+  "authorize": "Autorisieren",
+  "dispatchDocuments": "Dokumente versenden",
+  "printVoucher": "Gutschein drucken",
+  "back": "Zurück",
+  "reassign": "Neu zuweisen",
+  "sendEmail": "E-Mail senden",
+  "sendSMS": "SMS senden"
+  },
+  "claim_booking":{
+ "lossDate": "Schadensdatum",
+        "partyToBlame": "Schuldpartei",
+        "lossDescription": "Schadensbeschreibung",
+        "type_of_loss": "Art des Schadens",
+        "salvage_retained": "Salvage behalten",
+        "amt_owed_defaulter": "Betrag geschuldet Schuldner",
+        "guard_details_if_any": "Sicherheitsdetails (falls vorhanden)",
+        "raining": "Regen",
+        "claim_repudiated": "Schaden abgelehnt",
+        "reason_repudiated": "Grund für die Ablehnung",
+        "reasons_for_pending": "Gründe für die Aussetzung",
+        "prevention_measures": "Vorbeugende Maßnahmen",
+        "any_suspects": "Verdächtige",
+        "claim_amount": "Schadenhöhe",
+        "visibility": "Sichtbarkeit",
+        "insurance_contact_person": "Versicherungsansprechpartner",
+        "ref_no": "Referenznummer",
+        "recovery_steps_taken": "Ergriffene Schritte zur Wiederherstellung",
+        "road_surface_condition": "Straßenzustand"
+    
+  }
+
+}
   },
   "lms": {
     "common": {},
