--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1260,24 +1260,66 @@
         "currency": "Moneda"
       },
       "claim_transaction_report": {
-        "claim_transaction_report": "Informe de transacciones de reclamos",
-        "claim_revisions": "Revisiones de reclamos",
-        "claim_payments": "Pagos de reclamos",
-        "letters_and_memos": "Cartas y memorandos",
-        "policy_enquiry": "Consulta de pólizas",
-        "back_to_claim_enquiry": "Volver a la consulta de reclamos",
-        "trans_type": "Tipo de transacción",
-        "trans_date": "Fecha de la transacción",
-        "gross_liability": "Responsabilidad bruta",
-        "net_liability_payee": "Pagadero de responsabilidad neta",
-        "paid_amount": "Cantidad pagada",
-        "authorised_by": "Autorizado por",
-        "authorise_date": "Fecha de autorización",
-        "cheque_number": "Número de cheque",
-        "cheque_date": "Fecha del cheque",
-        "receipt_number": "Número de recibo",
-        "action": "Acción"
-      }
+    "claim_transaction_report": "Informe de transacciones de reclamos",
+    "claim_revisions": "Revisiones de reclamos",
+    "claim_payments": "Pagos de reclamos",
+    "letters_and_memos": "Cartas y memorandos",
+    "policy_enquiry": "Consulta de pólizas",
+    "back_to_claim_enquiry": "Volver a la consulta de reclamos",
+    "trans_type": "Tipo de transacción",
+    "trans_date": "Fecha de la transacción",
+    "gross_liability": "Responsabilidad bruta",
+    "net_liability_payee": "Pagadero de responsabilidad neta",
+    "paid_amount": "Cantidad pagada",
+    "authorised_by": "Autorizado por",
+    "authorise_date": "Fecha de autorización",
+    "cheque_number": "Número de cheque",
+    "cheque_date": "Fecha del cheque",
+    "receipt_number": "Número de recibo",
+    "action": "Acción"
+      },
+      "view_transaction":{
+        "claimRevisionSummary": "Resumen de la revisión de la reclamación",
+        "currentTicket": "Mi ticket actual",
+        "lossOpeningDataEntry": "Entrada de datos de apertura de siniestro",
+        "transactionType": "Tipo de transacción",
+        "revisionDate": "Fecha de revisión",
+        "revisionOwnPercentage": "Revisión propia %",
+        "ownGrossAmount": "Importe bruto propio",
+        "ownShare": "Cuota propia",
+        "authorizedBy": "Autorizado por",
+        "revisionAuthorized": "Revisión autorizada",
+        "dateAuthorized": "Fecha de autorización",
+        "revisionRemarks": "Observaciones de la revisión",
+        "claimOpeningPeril": "APERTURA DE RECLAMACIÓN RIESGO",
+        "makeReady": "Preparar",
+        "undoMakeReady": "Deshacer Preparar",
+        "authorize": "Autorizar",
+        "dispatchDocuments": "Despachar documentos",
+        "printVoucher": "Imprimir vale",
+        "back": "Atrás",
+        "reassign": "Reasignar",
+        "sendEmail": "Enviar correo electrónico",
+        "sendSMS": "Enviar SMS"
+      },
+      "claim_booking":{
+          "lossDate": "Fecha de la pérdida",
+          "partyToBlame": "Parte a culpar",
+          "lossDescription": "Descripción de la pérdida",
+          "salvageRetained": "Salvamento conservado",
+          "amtOwedDefaulter": "Importe adeudado al deudor",
+          "raining": "Lluvia",
+          "claimRepudiated": "Reclamación rechazada",
+          "reasonRepudiated": "Razón del rechazo",
+          "reasonsForPending": "Motivos de la espera",
+          "preventionMeasures": "Medidas de prevención",
+          "anySuspects": "Sospechosos",
+          "claimAmount": "Importe de la reclamación",
+          "visibility": "Visibilidad",
+          "insuranceContactPerson": "Persona de contacto de seguros",
+          "refNo": "Número de referencia",
+          "recoveryStepsTaken": "Pasos de recuperación tomados"
+        }
     }
   },
   "lms": {
