--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2298,6 +2298,32 @@
     "inputSearch": "Búsqueda de entrada",
     "serviceProviderType": "Tipo de proveedor de servicios",
     "accDetails": "Detalles de la cuenta",
-    "openRequests": "Solicitudes abiertas"
+    "openRequests": "Solicitudes abiertas",
+    "policyNo": "Número de Póliza",
+    "receiveDate": "Fecha de Recepción",
+    "action": "Acción",
+    "closedRequests": "Todas las Solicitudes Cerradas",
+    "clientsComments": "Comentarios de los Clientes",
+    "dateCaptured": "Fecha Capturada",
+    "clientComments": "Comentarios del Cliente",
+    "postedDate": "Fecha Publicada",
+    "solution": "Solución",
+    "serviceRequestDocs": "Documentos de Solicitud de Servicio",
+    "modifiedBy": "Modificado Por",
+    "dateCreated": "Fecha de Creación",
+    "referenceNo": "Número de Referencia",
+    "remarks": "Observaciones",
+    "agencyCommission": "Comisión de Agencia",
+    "agentName": "Nombre del Agente",
+    "copDate": "Fecha COP",
+    "crRefNo": "Núm. de Referencia Cr",
+    "drRefNo": "Núm. de Referencia Dr",
+    "commAmt": "Monto de la Comisión",
+    "withholdingTax": "Impuesto de Retención",
+    "netComm": "Comisión Neta",
+    "authBy": "Autorizado Por",
+    "clientName": "Nombre del Cliente",
+    "fee": "Tarifa",
+    "servProviderFees": "Tarifas del Proveedor de Servicios"
   }
 }
