--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1004,7 +1004,7 @@
       "policy_level_perils": "Policy level perils",
       "policy_remarks": "Policy remarks",
       "limits_of_liability": "Limits of liability",
-      "external_claim_exp": "External claims exp.",
+      "external_claim_exp": "External claims experience",
       "internal_claim_exp": "Internal claims exp.",
       "service_providers": "Service providers",
       "reasons_for_pending": "Reasons for pending",
