VQ-3030/Fix missing data  when patching values

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1522,6 +1522,92 @@
       "book_claim": "Book Claim"
     },
     "grp": {
+      "quotation": {
+        "client_creation": {
+          "client_details": "Client details",
+          "contact_information": "Contact information",
+          "other_details": "Other details",
+          "administrators": "Administrators",
+          "capture_administrator_details": "Capture administrator details",
+          "name": "Name",
+          "position": "Position",
+          "gender": "Gender",
+          "date_of_birth": "Date of birth",
+          "identification_type": "Identification type",
+          "identification_number": "Identification number",
+          "physical_address": "Physical address",
+          "phone_number": "Phone number",
+          "email": "Email",
+          "with_effect_from": "With effect from",
+          "with_effect_to": "With effect to",
+          "client_name": "Client name",
+          "type": "Type",
+          "status": "Status",
+          "incorporation_date": "Incorporation date",
+          "mode_of_identity": "Mode of Identity",
+          "registration_number": "Registration number",
+          "occupation": "Occupation",
+          "pin_number": "Pin number",
+          "affiliated_to_insurer": "Affiliated to the insurer",
+          "representation": "Representation",
+          "save": "Save",
+          "edit": "Edit",
+          "delete": "Delete",
+          "new_client": "New Client",
+          "existing_client": "Existing Client",
+          "select_or_type_client_name": "Select or Type Client name",
+          "inc_date_is_required": "Inc date is required",
+          "identity_mode_is_required": "Identity mode is required",
+          "pin_no_is_required": "PIN no is required",
+          "phone_no_is_required": "Phone no is required",
+          "address_is_required": "Address is required",
+          "country_is_required": "Country is required",
+          "county_state_is_required": "County/State is required",
+          "city_is_required": "City is required",
+          "representation_is_required": "Representation is required",
+          "new_client_name_is_required": "New client name is required",
+          "name_is_required": "Name is required",
+          "type_is_required": "Type is required",
+          "status_is_required": "Status is required",
+          "city_or_town": "City/Town",
+          "county_or_state": "County/State",
+          "country": "Country",
+          "continue": "Continue",
+          "occupation_is_required": "Occupation is required",
+          "email_is_required": "Email is required"
+        },
+        "quick_quote": {
+          "product_details": "Product details",
+          "product": "Product",
+          "duration_type": "Duration Type",
+          "facultative_type": "Facultative Type",
+          "quotation_covers": "Quotation Covers",
+          "frequency_of_payment": "Frequency of Payment",
+          "unit_rate_option": "Unit Rate Option",
+          "currency": "Currency",
+          "effective_date": "Effective Date",
+          "quotation_calculation_type": "Quotation Calculation Type",
+          "detailed": "Detailed",
+          "aggregate": "Aggregate",
+          "intermediary_details": "Intermediary details",
+          "intermediary": "Intermediary",
+          "branch": "Branch",
+          "commission_rate": "Commission Rate",
+          "product_is_required": "Product is required",
+          "duration_type_required": "Duration type required",
+          "facultative_type_required": "Facultative type required",
+          "quote_cover_required": "Quote cover required",
+          "freq_of_payment_required": "Freq of payment required",
+          "unit_rate_is_required": "Unit rate is required",
+          "currency_is_required": "Currency is required",
+          "date_is_required": "Date is required",
+          "intermediary_is_required": "Intermediary is required",
+          "commission_cannot_be_greater_than_100": "Commission cannot be greater than 100%",
+          "continue": "Continue"
+        },
+        "coverage": {},
+        "summary": {}
+      },
       "agent_portal": {
         "policy": "Policy",
         "policySummary": "Policy summary",
