--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1466,6 +1466,92 @@
       "yes": "Oui"
     },
     "grp": {
+      "quotation": {
+        "client_creation": {
+          "client_details": "Détails du client",
+          "contact_information": "Informations de contact",
+          "other_details": "Autres détails",
+          "administrators": "Administrateurs",
+          "capture_administrator_details": "Saisir les détails de l'administrateur",
+          "name": "Nom",
+          "position": "Position",
+          "gender": "Genre",
+          "date_of_birth": "Date de naissance",
+          "identification_type": "Type d'identification",
+          "identification_number": "Numéro d'identification",
+          "physical_address": "Adresse physique",
+          "phone_number": "Numéro de téléphone",
+          "email": "Email",
+          "with_effect_from": "Avec effet à partir de",
+          "with_effect_to": "Avec effet jusqu'à",
+          "client_name": "Nom du client",
+          "type": "Type",
+          "status": "Statut",
+          "incorporation_date": "Date d'incorporation",
+          "mode_of_identity": "Mode d'identité",
+          "registration_number": "Numéro d'enregistrement",
+          "occupation": "Profession",
+          "pin_number": "Numéro PIN",
+          "affiliated_to_insurer": "Affilié à l'assureur",
+          "representation": "Représentation",
+          "save": "Enregistrer",
+          "edit": "Modifier",
+          "delete": "Supprimer",
+          "new_client": "Nouveau client",
+          "existing_client": "Client existant",
+          "select_or_type_client_name": "Sélectionner ou taper le nom du client",
+          "inc_date_is_required": "La date d'incorporation est requise",
+          "identity_mode_is_required": "Le mode d'identité est requis",
+          "pin_no_is_required": "Le numéro PIN est requis",
+          "phone_no_is_required": "Le numéro de téléphone est requis",
+          "address_is_required": "L'adresse est requise",
+          "country_is_required": "Le pays est requis",
+          "county_state_is_required": "Le comté/l'état est requis",
+          "city_is_required": "La ville est requise",
+          "representation_is_required": "La représentation est requise",
+          "new_client_name_is_required": "Le nom du nouveau client est requis",
+          "name_is_required": "Le nom est requis",
+          "type_is_required": "Le type est requis",
+          "status_is_required": "Le statut est requis",
+          "city_or_town": "Ville",
+          "county_or_state": "Comté/État",
+          "country": "Pays",
+          "continue": "Continuer",
+          "occupation_is_required": "La profession est requise",
+          "email_is_required": "L'email est requis"
+        },
+        "quick_quote": {
+          "product_details": "Détails du produit",
+          "product": "Produit",
+          "duration_type": "Type de durée",
+          "facultative_type": "Type facultatif",
+          "quotation_covers": "Garanties du devis",
+          "frequency_of_payment": "Fréquence de paiement",
+          "unit_rate_option": "Option de taux unitaire",
+          "currency": "Devise",
+          "effective_date": "Date d'effet",
+          "quotation_calculation_type": "Type de calcul du devis",
+          "detailed": "Détaillé",
+          "aggregate": "Agrégé",
+          "intermediary_details": "Détails de l'intermédiaire",
+          "intermediary": "Intermédiaire",
+          "branch": "Agence",
+          "commission_rate": "Taux de commission",
+          "product_is_required": "Le produit est requis",
+          "duration_type_required": "Le type de durée est requis",
+          "facultative_type_required": "Le type facultatif est requis",
+          "quote_cover_required": "La garantie du devis est requise",
+          "freq_of_payment_required": "La fréquence de paiement est requise",
+          "unit_rate_is_required": "Le taux unitaire est requis",
+          "currency_is_required": "La devise est requise",
+          "date_is_required": "La date est requise",
+          "intermediary_is_required": "L'intermédiaire est requis",
+          "commission_cannot_be_greater_than_100": "La commission ne peut pas être supérieure à 100 %",
+          "continue": "Continuer"
+        },
+        "coverage": {},
+        "summary": {}
+      },
       "agent_portal": {
         "policy": "Police",
         "policySummary": "Résumé de la police",
